Bug 210260 - 11.0 -r301815 "kyua test -k /usr/tests/Kyuafile" bitstring tests broken on rpi2 [armv7-a/cortex-a7]
Summary: 11.0 -r301815 "kyua test -k /usr/tests/Kyuafile" bitstring tests broken on rp...
Status: Closed FIXED
Alias: None
Product: Base System
Classification: Unclassified
Component: arm (show other bugs)
Version: CURRENT
Hardware: arm Any
: --- Affects Only Me
Assignee: Alan Somers
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2016-06-13 18:28 UTC by Mark Millard
Modified: 2016-06-27 15:27 UTC (History)
2 users (show)

See Also:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Mark Millard 2016-06-13 18:28:03 UTC
On 2016-Jun-13, at 10:49 AM, Alan Somers <asomers@freebsd.org> wrote:

Please open a bug for the bitstring test failures and assign it to me.

So here is the verbose kyua report output relative to the bitstring tests:

===> sys/sys/bitstring_test:bit_clear
Result: broken: Test case body timed out
Duration: 300.032s
 
Metadata:
    allowed_architectures is empty
    allowed_platforms is empty
    description is empty
    has_cleanup = false
    required_configs is empty
    required_disk_space = 0
    required_files is empty
    required_memory = 0
    required_programs is empty
    required_user is empty
    timeout = 300
 
Standard error:
Subprocess timed out; sending KILL signal...
===> sys/sys/bitstring_test:bit_count
Result: broken: Premature exit; test case received signal 11 (core dumped)
Duration: 1.080s
 
Metadata:
    allowed_architectures is empty
    allowed_platforms is empty
    description is empty
    has_cleanup = false
    required_configs is empty
    required_disk_space = 0
    required_files is empty
    required_memory = 0
    required_programs is empty
    required_user is empty
    timeout = 300
 
Standard error:
Process with PID 77932 dumped core; attempting to gather stack trace
Cannot find any core file
===> sys/sys/bitstring_test:bit_ffc
Result: broken: Premature exit; test case received signal 11 (core dumped)
Duration: 1.077s
 
Metadata:
    allowed_architectures is empty
    allowed_platforms is empty
    description is empty
    has_cleanup = false
    required_configs is empty
    required_disk_space = 0
    required_files is empty
    required_memory = 0
    required_programs is empty
    required_user is empty
    timeout = 300
 
Standard error:
Process with PID 77934 dumped core; attempting to gather stack trace
Cannot find any core file
===> sys/sys/bitstring_test:bit_ffc_at
Result: broken: Premature exit; test case received signal 11 (core dumped)
Duration: 1.081s
 
Metadata:
    allowed_architectures is empty
    allowed_platforms is empty
    description is empty
    has_cleanup = false
    required_configs is empty
    required_disk_space = 0
    required_files is empty
    required_memory = 0
    required_programs is empty
    required_user is empty
    timeout = 300
 
Standard error:
Process with PID 77936 dumped core; attempting to gather stack trace
Cannot find any core file
===> sys/sys/bitstring_test:bit_ffs
Result: broken: Premature exit; test case received signal 11 (core dumped)
Duration: 1.082s
 
Metadata:
    allowed_architectures is empty
    allowed_platforms is empty
    description is empty
    has_cleanup = false
    required_configs is empty
    required_disk_space = 0
    required_files is empty
    required_memory = 0
    required_programs is empty
    required_user is empty
    timeout = 300
 
Standard error:
Process with PID 77938 dumped core; attempting to gather stack trace
Cannot find any core file
===> sys/sys/bitstring_test:bit_ffs_at
Result: broken: Premature exit; test case received signal 11 (core dumped)
Duration: 1.077s
 
Metadata:
    allowed_architectures is empty
    allowed_platforms is empty
    description is empty
    has_cleanup = false
    required_configs is empty
    required_disk_space = 0
    required_files is empty
    required_memory = 0
    required_programs is empty
    required_user is empty
    timeout = 300
 
Standard error:
Process with PID 77940 dumped core; attempting to gather stack trace
Cannot find any core file
===> sys/sys/bitstring_test:bit_nclear
Result: broken: Premature exit; test case received signal 11 (core dumped)
Duration: 1.083s
 
Metadata:
    allowed_architectures is empty
    allowed_platforms is empty
    description is empty
    has_cleanup = false
    required_configs is empty
    required_disk_space = 0
    required_files is empty
    required_memory = 0
    required_programs is empty
    required_user is empty
    timeout = 300
 
Standard error:
Process with PID 77942 dumped core; attempting to gather stack trace
Cannot find any core file
===> sys/sys/bitstring_test:bit_nset
Result: broken: Premature exit; test case received signal 11 (core dumped)
Duration: 1.079s
 
Metadata:
    allowed_architectures is empty
    allowed_platforms is empty
    description is empty
    has_cleanup = false
    required_configs is empty
    required_disk_space = 0
    required_files is empty
    required_memory = 0
    required_programs is empty
    required_user is empty
    timeout = 300
 
Standard error:
Process with PID 77944 dumped core; attempting to gather stack trace
Cannot find any core file
Comment 1 Alan Somers freebsd_committer freebsd_triage 2016-06-14 17:11:21 UTC
Reproduced on a Raspberry Pi 2 running head at change 301873
Comment 2 commit-hook freebsd_committer freebsd_triage 2016-06-24 21:45:32 UTC
A commit references this bug:

Author: asomers
Date: Fri Jun 24 21:44:46 UTC 2016
New revision: 302180
URL: https://svnweb.freebsd.org/changeset/base/302180

Log:
  Fix bitstring allocation on 32-bit platforms

  sys/sys/bitstring.h
  	Fix a rounding calculation that could undersize a bitstring on
  	32-bit platforms.

  tests/sys/sys/bitstring_test.h
  	Add a test for bitstr_size

  PR:		210260
  Reported by:	Mark Millard
  Reviewed by:	gibbs
  Approved by:	re (marius)
  Sponsored by:	Spectra Logic Corp
  Differential Revision:	https://reviews.freebsd.org/D6848

Changes:
  head/sys/sys/bitstring.h
  head/tests/sys/sys/bitstring_test.c
Comment 3 Mark Millard 2016-06-25 04:39:46 UTC
(In reply to commit-hook from comment #2)

I updated to -r302180 and tried another kyua run. The bitstring tests were not in the broken or failed lists this time:

# kyua report --results-filter broken --results-file /usr/tests | more
===> Broken tests
lib/msun/cexp_test:main  ->  broken: Received signal 6  [1.094s]
lib/msun/ctrig_test:main  ->  broken: Received signal 6  [1.097s]
lib/msun/exponential_test:main  ->  broken: Received signal 6  [1.097s]
lib/msun/fenv_test:main  ->  broken: Received signal 6  [1.099s]
lib/msun/fma_test:main  ->  broken: Received signal 6  [1.114s]
lib/msun/invctrig_test:main  ->  broken: Received signal 6  [1.118s]
lib/msun/invtrig_test:main  ->  broken: Received signal 6  [1.114s]
lib/msun/logarithm_test:main  ->  broken: Received signal 6  [1.096s]
lib/msun/lrint_test:main  ->  broken: Received signal 6  [1.096s]
lib/msun/nearbyint_test:main  ->  broken: Received signal 6  [1.096s]
lib/msun/rem_test:main  ->  broken: Received signal 6  [1.091s]
lib/msun/trig_test:main  ->  broken: Received signal 6  [1.094s]
sbin/growfs/legacy_test:main  ->  broken: Reported plan differs from actual executed tests  [0.479s]
sys/geom/class/eli/integrity_copy_test:main  ->  broken: Test case timed out  [1200.089s]
sys/geom/class/eli/onetime_a_test:main  ->  broken: Test case timed out  [600.041s]
===> Summary
Results read from /root/.kyua/store/results.usr_tests.20160625-012941-048472.db
Test cases: 5700 total, 54 skipped, 20 expected failures, 15 broken, 41 failed
Total time: 9093.092s
# kyua report --results-filter failed --results-file /usr/tests | more
===> Failed tests
lib/libc/c063/fstatat_test:fstatat_fd  ->  failed: /usr/src/contrib/netbsd-tests/lib/libc/c063/t_fstatat.c:74: memcmp(&st1, &st2, sizeof(st1)) == 0 not met  [0.028s]
lib/libc/ssp/ssp_test:fgets  ->  failed: Test case body returned a non-ok exit code, but this is not allowed  [0.159s]
lib/libc/ssp/ssp_test:gets  ->  failed: Test case body returned a non-ok exit code, but this is not allowed  [0.152s]
lib/libc/ssp/ssp_test:memcpy  ->  failed: atf-check failed; see the output of the test for details  [0.150s]
lib/libc/ssp/ssp_test:memmove  ->  failed: atf-check failed; see the output of the test for details  [0.149s]
lib/libc/ssp/ssp_test:memset  ->  failed: atf-check failed; see the output of the test for details  [0.152s]
lib/libc/ssp/ssp_test:read  ->  failed: Test case body returned a non-ok exit code, but this is not allowed  [0.159s]
lib/libc/ssp/ssp_test:readlink  ->  failed: atf-check failed; see the output of the test for details  [0.161s]
lib/libc/ssp/ssp_test:snprintf  ->  failed: atf-check failed; see the output of the test for details  [0.143s]
lib/libc/ssp/ssp_test:sprintf  ->  failed: atf-check failed; see the output of the test for details  [0.143s]
lib/libc/ssp/ssp_test:stpcpy  ->  failed: atf-check failed; see the output of the test for details  [0.146s]
lib/libc/ssp/ssp_test:stpncpy  ->  failed: atf-check failed; see the output of the test for details  [0.149s]
lib/libc/ssp/ssp_test:strcat  ->  failed: atf-check failed; see the output of the test for details  [0.148s]
lib/libc/ssp/ssp_test:strcpy  ->  failed: atf-check failed; see the output of the test for details  [0.152s]
lib/libc/ssp/ssp_test:strncat  ->  failed: atf-check failed; see the output of the test for details  [0.143s]
lib/libc/ssp/ssp_test:strncpy  ->  failed: atf-check failed; see the output of the test for details  [0.147s]
lib/libc/ssp/ssp_test:vsnprintf  ->  failed: atf-check failed; see the output of the test for details  [0.145s]
lib/libc/ssp/ssp_test:vsprintf  ->  failed: atf-check failed; see the output of the test for details  [0.146s]
lib/libc/stdio/printbasic_test:int_within_limits  ->  failed: printf("%tu", (size_t)-1) ==> [18446744073709551615], expected [4294967295]<<NEWLINE>>  [0.029s]
lib/libc/stdio/scanfloat_test:infinities_and_nans  ->  failed: /usr/src/lib/libc/tests/stdio/scanfloat_test.c:191: fetestexcept(FE_INVALID) == 0 not met  [0.032
s]
lib/libc/sys/mincore_test:mincore_resid  ->  failed: /usr/src/contrib/netbsd-tests/lib/libc/sys/t_mincore.c:225: check_residency(addr, npgs) == 0 not met  [0.04
1s]
lib/libc/sys/mincore_test:mincore_shmseg  ->  failed: /usr/src/contrib/netbsd-tests/lib/libc/sys/t_mincore.c:298: check_residency(addr, npgs) == 0 not met  [0.0
32s]
lib/libc/tls/tls_dynamic_test:t_tls_dynamic  ->  failed: 15 checks failed; see output for more details  [0.037s]
lib/libproc/proc_test:symbol_lookup  ->  failed: /usr/src/lib/libproc/tests/proc_test.c:116: state != PS_STOP: process has state 4  [0.180s]
lib/libxo/functional_test:test_02__E  ->  failed: atf-check failed; see the output of the test for details  [0.165s]
lib/libxo/functional_test:test_02__H  ->  failed: atf-check failed; see the output of the test for details  [0.169s]
lib/libxo/functional_test:test_02__HIPx  ->  failed: atf-check failed; see the output of the test for details  [0.174s]
lib/libxo/functional_test:test_02__HP  ->  failed: atf-check failed; see the output of the test for details  [0.168s]
lib/libxo/functional_test:test_02__J  ->  failed: atf-check failed; see the output of the test for details  [0.168s]
lib/libxo/functional_test:test_02__JP  ->  failed: atf-check failed; see the output of the test for details  [0.165s]
lib/libxo/functional_test:test_02__T  ->  failed: atf-check failed; see the output of the test for details  [0.169s]
lib/libxo/functional_test:test_02__X  ->  failed: atf-check failed; see the output of the test for details  [0.165s]
lib/libxo/functional_test:test_02__XP  ->  failed: atf-check failed; see the output of the test for details  [0.170s]
lib/msun/conj_test:main  ->  failed: 9 tests of 42 failed  [0.034s]
lib/msun/ldexp_test:ldexp_denormal  ->  failed: 4 checks failed; see output for more details  [0.032s]
local/kyua/model/metadata_test:override_all_with_set_string  ->  failed: Line 253: disk_space != md.required_disk_space() (16777216.00T != 2.00G)  [0.045s]
local/kyua/testers/tap_parser_test:try_parse_plan__insane  ->  failed: testers/tap_parser_test.c:135: 'too long' not matched in 'Plan line includes out of range
 numbers'  [0.034s]
sys/geom/class/eli/resize_test:main  ->  failed: 15 tests of 27 failed  [1.094s]
sys/kern/pipe/pipe_fstat_bug_test:main  ->  failed: Returned non-success exit status 1  [0.038s]
usr.bin/lastcomm/legacy_test:main  ->  failed: 4 tests of 6 failed  [0.139s]
usr.sbin/sa/legacy_test:main  ->  failed: 12 tests of 13 failed  [0.330s]
===> Summary
Results read from /root/.kyua/store/results.usr_tests.20160625-012941-048472.db
Test cases: 5700 total, 54 skipped, 20 expected failures, 15 broken, 41 failed
Total time: 9093.092s
Comment 4 Alan Somers freebsd_committer freebsd_triage 2016-06-27 15:27:15 UTC
Fixed by 302180